# openapi3-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  open_api.rs
test-data/: example-swagger.json  openapi.json  openapi.yaml  swagger.json  swagger.yaml
